# neurographite

./: .dockerignore  .gitignore  Cargo.toml  DOCKER.md  Dockerfile  LICENSE  PULSE.md  README.md  build-docker.sh  docker-compose.yml  verify-docker.sh
.github/workflows/: ci.yml
benches/: hypergraph_operations.rs  spike_propagation.rs
frontend/: index.html
src/: api.rs  core.rs  frontend.rs  hypergraph.rs  main.rs  network.rs  neural.rs  storage.rs
tests/: integration_tests.rs
