[package]
name = "neurographite"
version = "0.1.0"
edition = "2021"
description = "Neuromorphic Spiking Hypergraph Database for Dynamic Network Intelligence"
authors = ["Fox <fox@deepruin.com>", "Collin <collin@deepruin.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/deepruin/neurographite"
keywords = ["database", "graph", "neural", "neuromorphic", "hypergraph"]
categories = ["database", "data-structures"]

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Math and ML
ndarray = "0.15"
nalgebra = "0.32"
approx = "0.5"

# Async and networking
async-trait = "0.1"
futures = "0.3"

# Storage and serialization
bincode = "1.3"
rmp-serde = "1.1"

# Logging and error handling
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"

# Performance
rayon = "1.7"
crossbeam = "0.8"
parking_lot = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"

[[bench]]
name = "spike_propagation"
harness = false

[[bench]]
name = "hypergraph_operations"
harness = false